--- a/sponsor.ui
+++ b/sponsor.ui
@@ -28,9 +28,9 @@
      <colorrole role="Button">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>47</red>
-        <green>59</green>
-        <blue>82</blue>
+        <red>235</red>
+        <green>241</green>
+        <blue>244</blue>
        </color>
       </brush>
      </colorrole>
@@ -100,18 +100,18 @@
      <colorrole role="Base">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
+        <red>235</red>
+        <green>241</green>
+        <blue>244</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Window">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>47</red>
-        <green>59</green>
-        <blue>82</blue>
+        <red>235</red>
+        <green>241</green>
+        <blue>244</blue>
        </color>
       </brush>
      </colorrole>
@@ -174,9 +174,9 @@
      <colorrole role="Button">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>47</red>
-        <green>59</green>
-        <blue>82</blue>
+        <red>235</red>
+        <green>241</green>
+        <blue>244</blue>
        </color>
       </brush>
      </colorrole>
@@ -246,18 +246,18 @@
      <colorrole role="Base">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
+        <red>235</red>
+        <green>241</green>
+        <blue>244</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Window">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>47</red>
-        <green>59</green>
-        <blue>82</blue>
+        <red>235</red>
+        <green>241</green>
+        <blue>244</blue>
        </color>
       </brush>
      </colorrole>
@@ -320,9 +320,9 @@
      <colorrole role="Button">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>47</red>
-        <green>59</green>
-        <blue>82</blue>
+        <red>235</red>
+        <green>241</green>
+        <blue>244</blue>
        </color>
       </brush>
      </colorrole>
@@ -392,18 +392,18 @@
      <colorrole role="Base">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>47</red>
-        <green>59</green>
-        <blue>82</blue>
+        <red>235</red>
+        <green>241</green>
+        <blue>244</blue>
        </color>
       </brush>
      </colorrole>
      <colorrole role="Window">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
-        <red>47</red>
-        <green>59</green>
-        <blue>82</blue>
+        <red>235</red>
+        <green>241</green>
+        <blue>244</blue>
        </color>
       </brush>
      </colorrole>
@@ -459,44 +459,20 @@
    <string>Form</string>
   </property>
   <property name="autoFillBackground">
-   <bool>true</bool>
+   <bool>false</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true">QPushButton {
-    background-color: #FFFF; /* Initially transparent background */
-    color: black;
-
-    border-radius: 10px;
-    padding: 10px 20px;
-    font-weight: bold;
-    font-family: Calibri, sans-serif;
-}
-/* Hover effect */
-QPushButton:hover {
-    background-color: #FFF;
-    border: 3px solid #141E46;
-    color: black;
-}
-
-/* Pressed effect */
-QPushButton:pressed {
-    background-color: #141E46;
-    border: 2px solid #141E46;
-    padding: 9px 19px;
-    color: white;
-}
-QPushButton:checked {
-    background-color: #64a1c2; /* Your desired color */
-    border: none; /* Remove the border if needed */
+   <string notr="true">#Sponsor {
+    background-color: #EBF1F4 ; /* Background color for the Sponsor widget */
 }
 </string>
   </property>
   <widget class="QLabel" name="title_label">
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>10</y>
-     <width>894</width>
+     <x>530</x>
+     <y>0</y>
+     <width>521</width>
      <height>49</height>
     </rect>
    </property>
@@ -509,7 +485,7 @@ QPushButton:checked {
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: #F1F1F1</string>
+    <string notr="true">color: #FFFFF</string>
    </property>
    <property name="text">
     <string>Liste des sponsors</string>
@@ -518,13 +494,163 @@ QPushButton:checked {
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
+  <widget class="QWidget" name="widget_3" native="true">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>110</y>
+     <width>971</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">/* Initially transparent background */
+
+/*QWidget { background-color: #E0E0E1;
+}*/
+QPushButton {
+    background-color: transparent; 
+    color: black;
+
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-weight: bold;
+    font-family: Calibri, sans-serif;
+}
+
+/* Hover effect */
+QPushButton:hover {
+  
+    border: 3px solid #141E46;
+    color: black;
+}
+
+/* Pressed effect */
+QPushButton:pressed {
+    background-color: #141E46;
+    border: 2px solid #141E46;
+    padding: 9px 19px;
+    color: white;
+}
+
+/* Checked effect */
+QPushButton:checked {
+    background-color: #64a1c2; /* Your desired color */
+    border: none; /* Remove the border if needed */
+}
+QLineEdit {
+    background-color: #FFFFFF; /* Background color */
+    border: 2px solid #CCCCCC; /* Border color */
+    border-radius: 5px; /* Border radius */
+    padding: 7px 10px; /* Padding */
+    font-size: 14px; /* Font size */
+    color: #333333; /* Text color */
+}
+
+QLineEdit:hover {
+    border-color: #999999; /* Border color on hover */
+}
+
+QLineEdit:focus {
+    border-color: #0078D4; /* Border color when focused */
+}
+</string>
+   </property>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>10</y>
+      <width>131</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>statistiques</string>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../../Downloads/tableau-de-bord.png</normaloff>../../../Downloads/tableau-de-bord.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>25</width>
+      <height>25</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>121</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>export pdf</string>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../../Downloads/format-de-fichier-pdf.png</normaloff>../../../Downloads/format-de-fichier-pdf.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>25</width>
+      <height>25</height>
+     </size>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="search_input">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>15</y>
+      <width>311</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Search...</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>590</x>
+      <y>20</y>
+      <width>20</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>../../../Downloads/recherche.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+  </widget>
   <widget class="QWidget" name="result_widget" native="true">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>50</y>
-     <width>931</width>
-     <height>501</height>
+     <x>270</x>
+     <y>130</y>
+     <width>1081</width>
+     <height>431</height>
     </rect>
    </property>
    <property name="baseSize">
@@ -533,66 +659,13 @@ QPushButton:checked {
      <height>400</height>
     </size>
    </property>
-   <widget class="QLineEdit" name="search_input">
-    <property name="geometry">
-     <rect>
-      <x>320</x>
-      <y>90</y>
-      <width>116</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="placeholderText">
-     <string>Search...</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>190</x>
-      <y>80</y>
-      <width>41</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>../../../Downloads/format-de-fichier-pdf.png</normaloff>../../../Downloads/format-de-fichier-pdf.png</iconset>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>40</width>
-      <height>40</height>
-     </size>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_2">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>70</y>
-      <width>41</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>../../../Downloads/charte-de-croissance.png</normaloff>../../../Downloads/charte-de-croissance.png</iconset>
-    </property>
-   </widget>
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>130</y>
-      <width>771</width>
-      <height>321</height>
+      <x>30</x>
+      <y>40</y>
+      <width>971</width>
+      <height>371</height>
      </rect>
     </property>
     <property name="baseSize">
@@ -1053,13 +1126,17 @@ QPushButton:checked {
      <enum>Qt::NoFocus</enum>
     </property>
     <property name="styleSheet">
-     <string notr="true">QTableWidget {
+     <string notr="true">/* Apply styles to the QTableWidget */
+QTableWidget {
     alternate-background-color: #f0f0f0; /* Alternate row background color */
     background-color: white; /* Default background color of the table */
-    border: 1px solid #2c3e50; /* Table border color */
+    border-left: 1px solid #2c3e50; /* Table left border color */
+    border-right: 1px solid #2c3e50; /* Table right border color */
     font-family: &quot;Arial&quot;; /* Set the font family */
     font-size: 12px; /* Set the font size */
-   border-radius: 20px;
+    border-top: none; /* Remove the top border */
+    border-bottom: 1px solid #2c3e50; /* Table bottom border color */
+    border-radius: 20px;
 }
 
 /* Apply styles to the header of the QTableWidget */
@@ -1067,16 +1144,16 @@ QHeaderView::section {
     background-color: #15406e; /* Darker blue header background color */
     color: white; /* Header text color */
     padding: 0px; /* Header padding */
-    border:2px solid #2c3e50; /* Header border color */
- border-radius: 0px
-
+    border: 2px solid #2c3e50; /* Header border color */
+    border-top: none; /* Remove the top border */
+    border-bottom: none; /* Remove the bottom border */
+    border-radius: 0px;
 }
 
 /* Apply styles to the items within the QTableWidget */
-QTableWidget QTableWidget::item {
+QTableWidget::item {
     padding: 5px; /* Item padding */
     border: 1px solid #2c3e50; /* Item border color */
-
 }
 
 /* Apply styles to the even rows within the QTableWidget */
@@ -1085,10 +1162,11 @@ QTableWidget::item:alternate {
 }
 
 /* Apply styles when an item is selected in the QTableWidget */
-QTableWidget QTableWidget::item:selected {
+QTableWidget::item:selected {
     background-color: #3498db; /* Selected item background color (a slightly lighter blue) */
     color: black; /* Selected item text color */
-}</string>
+}
+</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::NoFrame</enum>
@@ -1257,8 +1335,8 @@ QTableWidget QTableWidget::item:selected {
   <widget class="QWidget" name="widget" native="true">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>80</y>
+     <x>-10</x>
+     <y>130</y>
      <width>61</width>
      <height>381</height>
     </rect>
@@ -1269,14 +1347,24 @@ QTableWidget QTableWidget::item:selected {
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>170</y>
+      <x>14</x>
+      <y>168</y>
       <width>31</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../../Downloads/plus (1).png</normaloff>../../../Downloads/plus (1).png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>30</width>
+      <height>30</height>
+     </size>
     </property>
     <property name="checkable">
      <bool>true</bool>
@@ -1294,8 +1382,9 @@ QTableWidget QTableWidget::item:selected {
     <property name="styleSheet">
      <string notr="true">QLabel {
     background-color: white;
-    border: 2px solid black;
-    border-radius: 10px;
+    border: 2px solid black; /* Add border */
+    border-top-right-radius: 10px; /* Border radius only on the top-right */
+    border-bottom-right-radius: 10px; /* Border radius only on the bottom-right */
     padding: 5px 10px;
     color: black;
 }
@@ -1311,9 +1400,9 @@ QTableWidget QTableWidget::item:selected {
   <widget class="QWidget" name="widget_2" native="true">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>90</y>
-     <width>311</width>
+     <x>0</x>
+     <y>140</y>
+     <width>261</width>
      <height>471</height>
     </rect>
    </property>
@@ -1342,7 +1431,7 @@ QTableWidget QTableWidget::item:selected {
    </widget>
    <widget class="QLineEdit" name="lineEdit_2">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
@@ -1555,14 +1644,27 @@ QTextEdit {
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>201</x>
-      <y>161</y>
+      <x>205</x>
+      <y>168</y>
       <width>31</width>
       <height>31</height>
      </rect>
     </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../../Downloads/plus (1).png</normaloff>../../../Downloads/plus (1).png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>30</width>
+      <height>30</height>
+     </size>
     </property>
     <property name="checkable">
      <bool>true</bool>
@@ -1580,8 +1682,9 @@ QTextEdit {
     <property name="styleSheet">
      <string notr="true">QLabel {
     background-color: white;
-    border: 2px solid black;
-    border-radius: 10px;
+    border: 2px solid black; /* Add border */
+    border-top-right-radius: 10px; /* Border radius only on the top-right */
+    border-bottom-right-radius: 10px; /* Border radius only on the bottom-right */
     padding: 5px 10px;
     color: black;
 }
@@ -1593,14 +1696,14 @@ QTextEdit {
    </widget>
    <zorder>label_5</zorder>
    <zorder>lineEdit_2</zorder>
-   <zorder>label_4</zorder>
-   <zorder>lineEdit_3</zorder>
-   <zorder>label</zorder>
-   <zorder>lineEdit</zorder>
-   <zorder>label_2</zorder>
-   <zorder>comboBox</zorder>
-   <zorder>label_3</zorder>
    <zorder>add_btn</zorder>
+   <zorder>lineEdit</zorder>
+   <zorder>lineEdit_3</zorder>
+   <zorder>comboBox</zorder>
+   <zorder>label</zorder>
+   <zorder>label_3</zorder>
+   <zorder>label_2</zorder>
+   <zorder>label_4</zorder>
    <zorder>label_7</zorder>
    <zorder>pushButton_4</zorder>
   </widget>
